desktop and mobile

--- a/photo.html
+++ b/photo.html
@@ -37,7 +37,7 @@
   <main class="container">
   <div class="wrapper-flex">
     <section class="user-blogs">
-        <h2 class="user-blogs__text">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</h2>
+        <h2 class="user-blogs__text">Взгляните на фотографии, которые выкладывают пользователи!<br class="mobile-separator">Видите, как не хватает ваших?</h2>
     </section>
     </div>
    <!--  <div class="blog-post"> -->
@@ -71,7 +71,7 @@
         <article class="blog-post">
           <h2 class="visually_hidden">Фотографии пользователей социальной сети</h2>
           <figure class="blog-post__image">
-            <img src="img/photo-car-mobile.jpg" width="289" height="182" alt="Фотография пользователя из социальной сети" class="mobile-photo">
+            <img src="img/photo-car-mobile.jpg" width="280" height="182" alt="Фотография пользователя из социальной сети" class="mobile-photo">
           </figure>
           <div class="blog-post__body">
             <header class="blog-header">
@@ -89,7 +89,7 @@
         <article class="blog-post">
           <h2 class="visually_hidden">Фотографии пользователей социальной сети</h2>
           <figure class="blog-post__image">
-            <img src="img/photo-drumset-mobile.jpg" width="289" height="182" alt="Фотография пользователя из социальной сети" class="mobile-photo">
+            <img src="img/photo-drumset-mobile.jpg" width="280" height="180" alt="Фотография пользователя из социальной сети" class="mobile-photo">
           </figure>
           <div class="blog-post__body">
           <header class="blog-header">
@@ -107,7 +107,7 @@
     <article class="blog-post">
           <h2 class="visually_hidden">Фотографии пользователей социальной сети</h2>
           <figure class="blog-post__image">
-            <img src="img/photo-window-mobile.jpg" width="289" height="182" alt="Фотография пользователя из социальной сети" class="mobile-photo">
+            <img src="img/photo-window-mobile.jpg" width="280" height="180" alt="Фотография пользователя из социальной сети" class="mobile-photo">
           </figure>
           <div class="blog-post__body">
           <header class="blog-header">
@@ -126,7 +126,7 @@
           <h2 class="visually_hidden">Фотограф
           ии пользователей социальной сети</h2>
           <figure class="blog-post__image">
-            <img src="img/photo-fair-mobile.jpg" width="289" height="182" alt="Фотография пользователя из социальной сети" class="mobile-photo">
+            <img src="img/photo-fair-mobile.jpg" width="280" height="180" alt="Фотография пользователя из социальной сети" class="mobile-photo">
           </figure>
           <div class="blog-post__body">
           <header class="blog-header">
@@ -139,11 +139,12 @@
               <span class="like-text">Нравится:</span>
               <span class="like-counts">4</span>
             </footer>
+            </div>
         </article>
         <article class="blog-post">
           <h2 class="visually_hidden">Фотографии пользователей социальной сети</h2>
           <figure class="blog-post__image">
-            <img src="img/photo-pov-mobile.jpg" width="289" height="182" alt="Фотография пользователя из социальной сети" class="mobile-photo">
+            <img src="img/photo-pov-mobile.jpg" width="280" height="180" alt="Фотография пользователя из социальной сети" class="mobile-photo">
           </figure>
           <div class="blog-post__body">
           <header class="blog-header">
@@ -160,45 +161,39 @@
         </article>
         <article class="blog-post">
           <h2 class="visually_hidden">Фотографии пользователей социальной сети</h2>
-          <div class="blog-post__wrapper">
             <figure class="blog-post__image">
-              <img src="img/photo-wing-mobile.jpg" width="289" height="182" alt="Фотография пользователя из социальной сети" class="mobile-photo">
+              <img src="img/photo-wing-mobile.jpg" width="280" height="180" alt="Фотография пользователя из социальной сети" class="mobile-photo">
             </figure>
-            <div class="blog-post__body">
+             <div class="blog-post__body">
             <header class="blog-header">
               <h2 class="blog-post__header">Надежда</h2>
               <span class="time-tamp">45 часов назад</span>
             </header>
-              <p class="blog-post__text">Всем GM и взаимные лайки!</p>
-              <footer class="blog-post__info blog-post__info--photo">
-                <span class="heart-icon"></span>
-                <span class="like-text">Нравится:</span>
-                <span class="like-counts">2560</span>
-              </footer>
-            </div>
+            <p class="blog-post__text">Всем GM и взаимные лайки!</p>
+            &nbsp;&nbsp;&nbsp;
+            <footer class="blog-post__info blog-post__info--photo">
+              <span class="heart-icon"></span>
+              <span class="like-text">Нравится:</span>
+              <span class="like-counts">356</span>
+            </footer>
           </div>
         </article>
    </div>
     <section class="describe-block">
       <h2 class="visually_hidden">Промо-текст</h2>
         <h2 class="describe-block__text">Затмите их всех!<br class="separator-desktop"><br class="separator-tablet">Выкладывайте все, что накопилось в телефоне!</h2>
-      </div>
     </section>
-    <section class="editor-block">
-      <h2 class="visually_hidden">Редактор фото</h2>
-      <div class="editor-block__content">
-        <article class="image-editor">
-          <h2 class="visually_hidden">Пример редактора фотографий приложения Pink</h2>
-          <div class="image-editor__image-block">
+    <div class="editor-block">
+      <div class="wrapper-flex image-editor">
+      <div class="image-editor__image-block">
             <img src="img/photo-road-mobile.jpg" width="280" height="375" alt="Фотография для редактирования" class="mobile-photo">
-          </div>
+      </div>
           <div class="image-editor__tools">
-            <div class="items-blocks">
-              <span class="items-blocks__icon"></span>
-              <span></span>
-              <span></span>
-            </div>
-            <div class="filter-range">
+            <dl class="image-editor__tools-list">
+            <dt class="image-editor__tools image-editor__tools--crop">
+            </dt>
+            <dd class="controls controls--size">
+              <div class="filter-range">
                 <h2 class="filter-range__title visually_hidden">Редактор фото</h2>
                     <div class="filter-controls">
                         <form action="https://echo.htmlacademy.ru" method="GET">
@@ -214,14 +209,79 @@
                         <div class="range-toggle range-toggle-max"><div class="range-toggle__inside"></div>
                     </div>
             </div>
-        </article>
-        <a href="#" class="editor-block__button">Запостить</a>
-        <a href="#" class="editor-block__button--disable">Отмена</a>
+            </div>
+            </dd>
+            <dt class="image-editor__tools image-editor__tools--fill">
+            </dt>
+             <dd class="controls controls--size">
+              <div class="filter-range">
+                <h2 class="filter-range__title visually_hidden">Редактор фото</h2>
+                    <div class="filter-controls">
+                        <form action="https://echo.htmlacademy.ru" method="GET">
+                        <label class="filter-controls__min-range">от<input type="text" name="min-price" value="0"></label>
+                        <label class="filter-controls__max-range">до<input type="text" name="max-price" value="3000"></label>
+                        </form>
+                    </div>
+                    <div class="range-controls">
+                        <div class="scale">
+                          <div class="bar"></div>
+                          </div>
+                        <div class="range-toggle range-toggle-min"></div>
+                        <div class="range-toggle range-toggle-max"><div class="range-toggle__inside"></div>
+                    </div>
+            </div>
+            </div>
+            </dd>
+            <dt class="image-editor__tools image-editor__tools--contrast">
+            </dt>
+             <dd class="controls controls--size">
+              <div class="filter-range">
+                <h2 class="filter-range__title visually_hidden">Редактор фото</h2>
+                    <div class="filter-controls">
+                        <form action="https://echo.htmlacademy.ru" method="GET">
+                        <label class="filter-controls__min-range">от<input type="text" name="min-price" value="0"></label>
+                        <label class="filter-controls__max-range">до<input type="text" name="max-price" value="3000"></label>
+                        </form>
+                    </div>
+                    <div class="range-controls">
+                        <div class="scale">
+                          <div class="bar"></div>
+                          </div>
+                        <div class="range-toggle range-toggle-min"></div>
+                        <div class="range-toggle range-toggle-max"><div class="range-toggle__inside"></div>
+                    </div>
+            </div>
+            </div>
+            </dd>
+            </dl>
+            <div class="buttons-block">
+             <input class="editor-block__button editor-block__button--submit" type="submit" value="Запостить">
+            <input class="editor-block__button  editor-block__button--disable" type="reset" value="Отмена">
+            </div>
+            </div>
+            </div>
+            <!-- <div class="filter-range">
+                <h2 class="filter-range__title visually_hidden">Редактор фото</h2>
+                    <div class="filter-controls">
+                        <form action="https://echo.htmlacademy.ru" method="GET">
+                        <label class="filter-controls__min-range">от<input type="text" name="min-price" value="0"></label>
+                        <label class="filter-controls__max-range">до<input type="text" name="max-price" value="3000"></label>
+                        </form>
+                    </div>
+                    <div class="range-controls">
+                        <div class="scale">
+                          <div class="bar"></div>
+                          </div>
+                        <div class="range-toggle range-toggle-min"></div>
+                        <div class="range-toggle range-toggle-max"><div class="range-toggle__inside"></div>
+                    </div>
+            </div>
+            </div>
+        </div> -->
       </div>
-    </section>
   </main>
     <footer class="page-shown-footer">
-    <div class="wrapper">
+    <div class="wrapper footer">
       <section class="page-shown-footer__img-wrap">
         <h2 class="visually_hidden">Свяжитесь с нами</h2>
         <img src="img/logo.jpg" alt="Pink logo">
@@ -241,5 +301,4 @@
     </div>
   </footer>
 </body>
-
 </html>
