mobile version fixes

--- a/photo.html
+++ b/photo.html
@@ -170,7 +170,6 @@
               <span class="time-tamp">45 часов назад</span>
             </header>
             <p class="blog-post__text">Всем GM и взаимные лайки!</p>
-            &nbsp;&nbsp;&nbsp;
             <footer class="blog-post__info blog-post__info--photo">
               <span class="heart-icon"></span>
               <span class="like-text">Нравится:</span>
@@ -192,7 +191,7 @@
             <dl class="image-editor__tools-list">
             <dt class="image-editor__tools image-editor__tools--crop">
             </dt>
-            <dd class="controls controls--size">
+            <dd class="controls controls--crop">
               <div class="filter-range">
                 <h2 class="filter-range__title visually_hidden">Редактор фото</h2>
                     <div class="filter-controls">
@@ -213,7 +212,7 @@
             </dd>
             <dt class="image-editor__tools image-editor__tools--fill">
             </dt>
-             <dd class="controls controls--size">
+             <dd class="controls controls--fill">
               <div class="filter-range">
                 <h2 class="filter-range__title visually_hidden">Редактор фото</h2>
                     <div class="filter-controls">
@@ -234,7 +233,7 @@
             </dd>
             <dt class="image-editor__tools image-editor__tools--contrast">
             </dt>
-             <dd class="controls controls--size">
+             <dd class="controls controls--contrast">
               <div class="filter-range">
                 <h2 class="filter-range__title visually_hidden">Редактор фото</h2>
                     <div class="filter-controls">
