fix media and add table

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
                     <div class="features-items-group">
                     <section class="features-items__block">
                         <h2 class="features-items__title">Поднимает настроение</h2>
-                        <p class="features-items__descr">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
+                        <p class="features-items__descr">Приложение позволит вам победить осеннюю хандру и деперессию буквально в <br class="separator">несколько кликов!</p>
                     </section>
                     <section class="features-items__block">
                         <h2 class="features-items__title">Меняем мир вокруг</h2>
-                        <p class="features-items__descr">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+                        <p class="features-items__descr">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы<br class="separator">усилить эффект</p>
                     </section>
                     <section class="features-items__block">
                         <h2 class="features-items__title">Заводит  <br class="separator-desktop"> новых друзей</h2>
@@ -82,7 +82,7 @@
                     </div>
                     <section class="features-items__block mobile_hidden">
                       <h2 class="features-items__title--custom_size">Эффект<br class="separator"> на 24 часа!</h2>
-                      <p class="features-items__descr features-items__descr--custom_description">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
+                      <p class="features-items__descr features-items__descr--custom_description">Британские ученые провели исследования и доказали,<br class="separator-desktop">что положительный эффект<br class="separator">от использования приложения длится<br class="separator">целые сутки!</p>
                       <a class="features-items__link">Узнать больше об исследовании</a>
                     </section>
                 </div>
@@ -107,10 +107,8 @@
         </section>
         <section class="price-block">
             <h2 class="visually_hidden">Таблица стоимости тарифов приложения Pink</h2>
-            <article class="price-table">
-                <h2 class="visually_hidden">Таблица стоимости тарифов приложения Pink</h2>
-                <table class="traffic-table">
-                   <thead class="traffic-table__head">
+            <table class="traffic-table">
+                <thead class="traffic-table__head">
                    <tr>
                     <th class="traffic-table_headcell traffic-table_headcell--no-borders"></th>
                     <th class="traffic-table_headcell">
