--- a/photo.html
+++ b/photo.html
@@ -37,7 +37,7 @@
   <main class="container">
   <div class="wrapper-flex">
     <section class="user-blogs">
-        <h2 class="user-blogs__text">Взгляните на фотографии, которые выкладывают пользователи!<br class="mobile-separator">Видите, как не хватает ваших?</h2>
+        <h2 class="user-blogs__text">Взгляните на фотографии, которые выкладывают пользователи!<br class="mobile-separator mobile-separator--desktop">Видите, как не хватает ваших?</h2>
     </section>
     </div>
    <!--  <div class="blog-post"> -->
@@ -56,7 +56,7 @@
           <div class="blog-post__body panorama-body">
           <header class="panorama-header">
             <h2 class="blog-post__header panorama-header__text">Анна</h2>
-            <span class="time-tamp">5 минут назад</span>
+            <span class="time-tamp">(5 минут назад)</span>
           </header>
             <p class="blog-post__text panorama-text">Прыгать или нет?Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
             <footer class="blog-post__info panorama-info">
@@ -76,7 +76,7 @@
           <div class="blog-post__body">
             <header class="blog-header">
               <h2 class="blog-post__header">Левон</h2>
-              <span class="time-tamp">5 часов назад</span>
+              <span class="time-tamp">(5 часов назад)</span>
             </header>
             <p class="blog-post__text">Вчера он на луну летал, сегодня в руки к нам попал</p>
             <footer class="blog-post__info blog-post__info--photo">
@@ -94,7 +94,7 @@
           <div class="blog-post__body">
           <header class="blog-header">
             <h2 class="blog-post__header">Антон</h2>
-            <span class="time-tamp">12 часов назад</span>
+            <span class="time-tamp">(12 часов назад)</span>
           </header>
             <p class="blog-post__text">Соседи будут рады!</p>
             <footer class="blog-post__info blog-post__info--photo">
@@ -112,7 +112,7 @@
           <div class="blog-post__body">
           <header class="blog-header">
             <h2 class="blog-post__header">Борис</h2>
-            <span class="time-tamp">20 часов назад</span>
+            <span class="time-tamp">(20 часов назад)</span>
           </header>
             <p class="blog-post__text">Здесь могла бы быть ваша цитата о высоком и вечном</p>
             <footer class="blog-post__info blog-post__info--photo">
@@ -131,7 +131,7 @@
           <div class="blog-post__body">
           <header class="blog-header">
             <h2 class="blog-post__header">Сергей</h2>
-            <span class="time-tamp">25 часов назад</span>
+            <span class="time-tamp">(25 часов назад)</span>
           </header>
             <p class="blog-post__text">Самая кубанская в мире!</p>
             <footer class="blog-post__info blog-post__info--photo">
@@ -149,7 +149,7 @@
           <div class="blog-post__body">
           <header class="blog-header">
             <h2 class="blog-post__header">Максим</h2>
-            <span class="time-tamp">40 часов назад</span>
+            <span class="time-tamp">(40 часов назад)</span>
           </header>
             <p class="blog-post__text">Где снег-то?</p>
             <footer class="blog-post__info blog-post__info--photo">
@@ -167,7 +167,7 @@
              <div class="blog-post__body">
             <header class="blog-header">
               <h2 class="blog-post__header">Надежда</h2>
-              <span class="time-tamp">45 часов назад</span>
+              <span class="time-tamp">(45 часов назад)</span>
             </header>
             <p class="blog-post__text">Всем GM и взаимные лайки!</p>
             <footer class="blog-post__info blog-post__info--photo">
