--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         </section>
         <section class="price-block">
             <h2 class="visually_hidden">Таблица стоимости тарифов приложения Pink</h2>
+            <div class="wrapper">
             <table class="traffic-table">
                 <thead class="traffic-table__head">
                    <tr>
@@ -143,13 +144,14 @@
                     <td class="traffic-table__cell traffic-table__cell--no">Розовый фильтр</td>
                     <td class="traffic-table__cell traffic-table__cell--no">Розовый фильтр</td>
                     </tr>
+                    </tbody>
                     </thead>
                 </table>
-            </article>
             <div class="slider-reviews__pagination">
                 <span class="slider-reviews__pagination-item--active"></span>
                 <span></span>
                 <span></span>
+            </div>
             </div>
         </section>
         <section class="info-block">
